erDiagram
    Project ||--o{ Conversation : contains
    Project ||--o{ Asset : contains
    Conversation ||--o{ Message : contains
    Message ||--o{ AssetReference : contains
    Asset ||--o{ AssetVersion : has
    Asset ||--o{ AssetReference : references
    
    Project {
        uuid id PK
        string name
        string description
        json metadata
        timestamp created_at
        timestamp updated_at
    }
    
    Conversation {
        uuid id PK
        uuid project_id FK
        string title
        timestamp created_at
        timestamp updated_at
    }
    
    Message {
        uuid id PK
        uuid conversation_id FK
        string role "user/assistant"
        text content
        json metadata
        timestamp created_at
    }
    
    Asset {
        uuid id PK
        uuid project_id FK
        string name
        string asset_type "mermaid_diagram/project_description/roadmap/tech_doc/prompt"
        text current_content
        int current_version
        timestamp created_at
        timestamp updated_at
    }
    
    AssetVersion {
        uuid id PK
        uuid asset_id FK
        int version_number
        text content
        uuid created_by_message_id FK
        timestamp created_at
    }
    
    AssetReference {
        uuid id PK
        uuid message_id FK
        uuid asset_id FK
        int version_referenced
        string reference_type "creation/modification/mention"
    }
